# dprint-plugin-typescript

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml
src/configuration/: builder.rs  resolve_config.rs  types.rs
src/parsing/: parser.rs
tests/specs/indentation/: HangingIndentTimes_MultiLineIndentTimes.txt  MultiLineIndentTimes_All.txt
