[package]
name = "dprint-plugin-typescript"
description = "TypeScript and JavaScript code formatter."
keywords = ["formatting", "formatter", "typescript", "javascript"]
version = "0.49.0"
authors = ["David Sherret <dsherret@gmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/dprint/dprint-plugin-typescript"
repository = "https://github.com/dprint/dprint-plugin-typescript"

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false
overflow-checks = false
panic = "abort"

[features]
wasm = ["serde_json", "dprint-core/wasm"]
tracing = ["dprint-core/tracing"]

[dependencies]
# This original line only works when depending on a public version, which doesn't have some of the needed changes; leaving this here to simplify merge conflict resolution when pulling in upstream
# dprint-core = { version = "0.43.0", features = ["formatting"] }
# For CI we control which version of the repo we're checking out in the workflow file
dprint-core = { path = "./dprint/crates/core", features = ["formatting"] }
# Comment the line above and use the following line instead with CARGO_NET_GIT_FETCH_WITH_CLI=true for local development
# E.g.: CARGO_NET_GIT_FETCH_WITH_CLI=true cargo build --release --target wasm32-unknown-unknown
# The revision here should match the cargo dprint-core version above. There is also another copy of this revision in the CI scripts
# dprint-core = { git = "ssh://org-2562356@github.com/Canva/dprint.git", features = ["formatting"], rev = "ffdbe5066383a7edc0a75f5096f52cde0c2f4cd5" }

fnv = "1.0.7"
swc_common = "0.11.0"
swc_ecmascript = { version = "0.46.0", features = ["parser"] }
swc_ast_view = { version = "0.24.0", package = "dprint-swc-ecma-ast-view" }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
dprint-development = "0.4.0"
debug-here = "0.2"
serde_json = { version = "1.0" }
